--- a/app/src/main/res/layout/activity_nickname_change.xml
+++ b/app/src/main/res/layout/activity_nickname_change.xml
@@ -52,7 +52,7 @@
                 android:id="@+id/imageView10"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
-                app:srcCompat="@drawable/wrong"
+                android:src="@drawable/wrong"
                 android:layout_alignTop="@+id/nickname_textview"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
