--- a/app/src/main/res/layout/activity_pwd_change.xml
+++ b/app/src/main/res/layout/activity_pwd_change.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <xzh.com.materialdesign.view.TitleBar
@@ -48,6 +49,7 @@
                 android:textSize="30px" />
 
         </RelativeLayout>
+
 
         <RelativeLayout
             android:id="@+id/new_pwd_layout2"
@@ -128,7 +130,7 @@
             android:textSize="12dp" />
 
         <Button
-            android:id="@+id/ok_button2"
+            android:id="@+id/pwd_change_ok_button"
             android:layout_width="358dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
