--- a/app/src/main/res/layout/activity_phone_change.xml
+++ b/app/src/main/res/layout/activity_phone_change.xml
@@ -4,11 +4,16 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
+    <xzh.com.materialdesign.view.TitleBar
+        android:id="@+id/title_bar7"
+        style="@style/title" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_below="@id/title_bar7">
 
         <RelativeLayout
             android:layout_width="match_parent"
