--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,7 @@
     <color name="black_alpha">#33000000</color>
     <color name="transparent">#00000000</color>
     <color name="white">#ffffff</color>
+
+    <color name="light_gray">#E5E5E5</color>
 </resources>
+
