--- a/app/src/main/res/layout/activity_register_phone.xml
+++ b/app/src/main/res/layout/activity_register_phone.xml
@@ -147,7 +147,7 @@
         </RelativeLayout>
 
         <Button
-            android:id="@+id/signin_button"
+            android:id="@+id/to_validname_button"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
