--- a/app/src/main/res/layout/activity_register_validname.xml
+++ b/app/src/main/res/layout/activity_register_validname.xml
@@ -161,10 +161,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -183,7 +183,7 @@
                     android:layout_gravity="bottom"
                     android:text="@string/login_label_validNum"
                     android:textColor="@color/myPrimaryColor"
-                    android:textSize="18dp"/>
+                    android:textSize="18dp" />
 
                 <EditText
                     android:id="@+id/validationNum_email"
@@ -191,7 +191,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:textColor="@color/myPrimaryColor"
-                    android:textSize="18dp"/>
+                    android:textSize="18dp" />
             </LinearLayout>
 
             <Button
@@ -211,11 +211,10 @@
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:background="@color/light_gray"
             android:layout_gravity="center_horizontal"
+            android:background="@color/light_gray"
             android:text="@string/register_finish"
-            android:textSize="20dp"
-            />
+            android:textSize="20dp" />
 
     </LinearLayout>
 
