--- a/app/src/main/res/layout/activity_email_change.xml
+++ b/app/src/main/res/layout/activity_email_change.xml
@@ -4,23 +4,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <xzh.com.materialdesign.view.TitleBar
-        android:id="@+id/title_bar6"
-        style="@style/title" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/title_bar6"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
         android:orientation="vertical">
+
+        <include layout="@layout/topbar_layout"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp">
+
+        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/school_change_layout"
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:background="@drawable/boarder">
+            android:background="@drawable/boarder"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp">
 
             <TextView
                 android:id="@+id/school_textview"
@@ -48,7 +51,9 @@
             android:id="@+id/email_change_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/boarder">
+            android:background="@drawable/boarder"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp">
 
             <TextView
                 android:id="@+id/email_textView"
@@ -99,12 +104,21 @@
 
         <Button
             android:id="@+id/email_ok_button"
-            android:layout_width="match_parent"
+            android:layout_width="360dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:backgroundTint="@color/myPrimaryColor"
-            android:text="确认" />
+            android:text="确认"
+            android:clickable="true"/>
 
+        <Button
+            android:id="@+id/email_cancel_button"
+            android:layout_width="360dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:backgroundTint="@color/myPrimaryColor"
+            android:text="取消"
+            android:clickable="true"/>
 
     </LinearLayout>
 
