--- a/app/src/main/res/layout/activity_nickname_change.xml
+++ b/app/src/main/res/layout/activity_nickname_change.xml
@@ -5,27 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <xzh.com.materialdesign.view.TitleBar
+        android:id="@+id/title_bar4"
+        style="@style/title" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <include layout="@layout/topbar_layout"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="10dp">
-
-        </RelativeLayout>
+        android:layout_below="@id/title_bar4"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:orientation="vertical"
+        android:weightSum="1">
 
         <RelativeLayout
             android:id="@+id/nickname_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/boarder"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp">
+            android:background="@drawable/boarder">
 
             <TextView
                 android:id="@+id/nickname_textview"
@@ -76,21 +73,19 @@
 
         <Button
             android:id="@+id/nickname_ok_button"
-            android:layout_width="360dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:backgroundTint="@color/myPrimaryColor"
-            android:text="确认"
-            android:clickable="true"/>
+            android:text="确认" />
 
         <Button
             android:id="@+id/nickname_cancel_button"
-            android:layout_width="360dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:backgroundTint="@color/myPrimaryColor"
-            android:text="取消"
-            android:clickable="true"/>
+            android:text="取消" />
 
 
     </LinearLayout>
