--- a/app/src/main/res/layout/activity_pwd_set.xml
+++ b/app/src/main/res/layout/activity_pwd_set.xml
@@ -4,26 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <xzh.com.materialdesign.view.TitleBar
+        android:id="@+id/title_bar2"
+        style="@style/title" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <include layout="@layout/topbar_layout"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="10dp">
-
-        </RelativeLayout>
+        android:orientation="vertical"
+        android:layout_below="@id/title_bar2"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
 
         <RelativeLayout
             android:id="@+id/new_pwd_layout1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/boarder"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp">
+            android:background="@drawable/boarder">
 
             <TextView
                 android:id="@+id/new_pwd_textview1"
@@ -57,9 +54,7 @@
             android:id="@+id/check_pwd_layout1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/boarder"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp">
+            android:background="@drawable/boarder">
 
             <TextView
                 android:id="@+id/check_pwd_textView1"
@@ -100,21 +95,11 @@
 
         <Button
             android:id="@+id/pwd_set_ok_button"
-            android:layout_width="360dp"
+            android:layout_width="358dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:backgroundTint="@color/myPrimaryColor"
-            android:text="确认"
-            android:clickable="true"/>
-
-        <Button
-            android:id="@+id/pwd_set_cancel_button"
-            android:layout_width="360dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:backgroundTint="@color/myPrimaryColor"
-            android:text="取消"
-            android:clickable="true"/>
+            android:text="确认" />
 
     </LinearLayout>
 
