--- a/app/src/main/res/layout/activity_phone_login.xml
+++ b/app/src/main/res/layout/activity_phone_login.xml
@@ -79,7 +79,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:background="@color/myAccentColor"
+                android:background="@color/myPrimaryColor"
                 android:text="@string/login_button_send_validation" />
 
         </RelativeLayout>
@@ -125,7 +125,7 @@
                 android:gravity="center"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
                 android:layout_gravity="center_horizontal"
-                android:textColor="@color/gray"
+                android:textColor="@color/myPrimaryColor"
                 android:clickable="true"
                 android:textSize="15dp" />
 
@@ -148,7 +148,7 @@
                 android:text="@string/login_label_phone_longin"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
                 android:layout_gravity="center_horizontal"
-                android:textColor="@color/myPrimaryColor"
+                android:textColor="@color/gray"
                 android:clickable="false"
                 android:textSize="15dp" />
         </LinearLayout>
