--- a/app/src/main/res/layout/activity_name_change.xml
+++ b/app/src/main/res/layout/activity_name_change.xml
@@ -44,7 +44,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/name_textview"
                 android:layout_toRightOf="@+id/name_textview"
-                android:ems="10"
+                android:textColor="@color/base_color_text_black"
                 android:inputType="text"
                 android:maxLength="20"
                 android:textColorHint="@color/gray"
