--- a/app/src/main/res/layout/activity_pwd_change.xml
+++ b/app/src/main/res/layout/activity_pwd_change.xml
@@ -44,7 +44,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/old_pwd_textview2"
                 android:layout_toRightOf="@+id/old_pwd_textview2"
-                android:ems="10"
+                android:textColor="@color/base_color_text_black"
                 android:hint="旧密码"
                 android:inputType="textPassword"
                 android:maxLength="20"
@@ -80,7 +80,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/new_pwd_textview2"
-                android:ems="10"
+                android:textColor="@color/base_color_text_black"
                 android:hint="新密码"
                 android:inputType="textPassword"
                 android:maxLength="20"
@@ -116,7 +116,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/check_pwd_textView2"
-                android:ems="10"
+                android:textColor="@color/base_color_text_black"
                 android:hint="再次输入"
                 android:inputType="textPassword"
                 android:maxLength="20"
