--- a/app/src/main/res/layout/activity_pwd_set.xml
+++ b/app/src/main/res/layout/activity_pwd_set.xml
@@ -44,7 +44,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/new_pwd_textview1"
                 android:layout_toRightOf="@+id/new_pwd_textview1"
-                android:ems="10"
+                android:textColor="@color/base_color_text_black"
                 android:hint="新密码"
                 android:inputType="textPassword"
                 android:maxLength="20"
@@ -80,7 +80,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/check_pwd_textView1"
                 android:layout_toRightOf="@+id/check_pwd_textView1"
-                android:ems="10"
+                android:textColor="@color/base_color_text_black"
                 android:hint="再次输入"
                 android:inputType="textPassword"
                 android:maxLength="20"
