--- a/app/src/main/res/layout/activity_nickname_change.xml
+++ b/app/src/main/res/layout/activity_nickname_change.xml
@@ -45,6 +45,7 @@
                 android:inputType="textPassword"
                 android:maxLength="20"
                 android:textColorHint="@color/gray"
+                android:textColor="@color/base_color_text_black"
                 android:textSize="30px"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/nickname_textview"
