--- a/app/src/main/res/layout/fragment_navigation_google.xml
+++ b/app/src/main/res/layout/fragment_navigation_google.xml
@@ -140,25 +140,10 @@
         android:layout_alignParentStart="true">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_drawer_explore_normal"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="84dp"
-            android:layout_marginStart="84dp" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/imageView"
-            android:layout_centerHorizontal="true"
-            android:text="Run  For  You ! !    V1.0 "
-            android:textColor="@android:color/black" />
-
+            android:src="@drawable/logo" />
     </RelativeLayout>
 
 </RelativeLayout>
