--- a/app/src/main/res/layout/order_layout.xml
+++ b/app/src/main/res/layout/order_layout.xml
@@ -63,7 +63,7 @@
                         android:id="@+id/modify_custom"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="#04bebd"
+                        android:background="@color/myPrimaryColor"
                         android:text="更改收货人"
                         android:textSize="16dp"
                         android:textColor="#fff"
@@ -556,7 +556,7 @@
         android:id="@+id/pay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#04bebd"
+        android:background="@color/myPrimaryColor"
         android:text="确认发布"
         android:textSize="20dp"
         android:textColor="#fff"
