--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,9 @@
         http://www.google.com/design/spec/style/color.html#color-ui-color-palette
     -->
 
-    <color name="myPrimaryColor">#B0E0E6</color>
-    <color name="myPrimaryDarkColor">#BFEFFF</color>
-    <color name="myAccentColor">#B0E0E6</color>
+    <color name="myPrimaryColor">#B452CD</color>
+    <color name="myPrimaryDarkColor">#AB82FF</color>
+    <color name="myAccentColor">#AB82FF</color>
     <color name="myDrawerBackground">#F2F2F2</color>
     <color name="myWindowBackground">#F8F8FF</color>
     <color name="myTextPrimaryColor">#FFFFFF</color>
