--- a/app/src/main/res/layout/order_myorder_detail.xml
+++ b/app/src/main/res/layout/order_myorder_detail.xml
@@ -4,8 +4,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
-
-   
+    <include layout="@layout/topbar_layout"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,7 +19,6 @@
             android:layout_alignParentTop="true"
             android:layout_marginLeft="12dp"
             android:layout_marginStart="12dp"
-            android:layout_marginTop="23dp"
             android:text="发起时间"
             android:textAlignment="center"
             android:textColor="@color/base_color_text_black"
@@ -50,7 +48,7 @@
             android:textSize="20dp"
             android:textColor="@color/base_color_text_black"
             android:text="物品类型" />
-       
+
 
         <TextView
             android:id="@+id/type_text"
@@ -64,7 +62,7 @@
             android:textColor="@color/base_color_text_black"
             android:textSize="20dp" />
 
-       
+
 
         <TextView
             android:id="@+id/order_title"
@@ -123,6 +121,16 @@
             android:textSize="20dp"
             android:textColor="@color/base_color_text_black"
             android:text="订单状态" />
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/orderType_title"
+            android:layout_alignLeft="@+id/cost_text"
+            android:layout_alignStart="@+id/cost_text"
+            android:textColor="@color/base_color_text_black"
+            android:text="待配送"
+            android:textSize="20dp"/>
 
         <Button
             android:id="@+id/button_contact"
@@ -145,8 +153,15 @@
             android:layout_marginRight="66dp"
             android:text="我要退款" />
 
+        <ImageView
+            android:id="@+id/imageView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/map_image"
+            android:layout_below="@+id/cost_title"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
 
     </RelativeLayout>
-
-
 </LinearLayout>
