--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -9,7 +9,29 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <include layout="@layout/topbar_layout" />
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center">
+
+            <ImageButton
+                android:id="@+id/contactBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/back_icon" />
+
+            <TextView
+                android:id="@+id/nav_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="20sp" />
+
+        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
