--- a/app/src/main/res/layout/order_detail.xml
+++ b/app/src/main/res/layout/order_detail.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
-
+    <include layout="@layout/topbar_layout"></include>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
