--- a/app/src/main/res/layout/order_transport_detail.xml
+++ b/app/src/main/res/layout/order_transport_detail.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <include
+        layout="@layout/topbar_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -67,179 +73,230 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/time_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="12dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="23dp"
-            android:text="发起时间"
-            android:textAlignment="center"
-            android:textColor="@color/base_color_text_black"
-            android:textSize="20dp" />
 
-        <TextView
-            android:id="@+id/time_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2017-5-7 19：00"
-            android:textSize="20dp"
-            android:textColor="@color/base_color_text_black"
-            android:layout_marginLeft="28dp"
-            android:layout_marginStart="28dp"
-            android:layout_alignBaseline="@+id/time_title"
-            android:layout_alignBottom="@+id/time_title"
-            android:layout_toRightOf="@+id/type_title"
-            android:layout_toEndOf="@+id/type_title" />
-        <TextView
-            android:id="@+id/type_title"
-            android:layout_width="wrap_content"
+        <TableLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/time_title"
             android:layout_alignStart="@+id/time_title"
-            android:layout_below="@+id/time_title"
-            android:layout_marginTop="10dp"
-            android:textSize="20dp"
-            android:textColor="@color/base_color_text_black"
-            android:text="物品类型" />
+           >
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/time_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="20dp"
+                    android:text="发起时间"
+                    android:textAlignment="center"
+                    android:textColor="@color/base_color_text_black"
+                    android:textSize="20dp" />
+
+                <TextView
+                    android:id="@+id/time_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="2017-5-7 19：00"
+                    android:textColor="@color/base_color_text_black"
+                    android:textSize="20dp" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+                <TextView
+                    android:id="@+id/type_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="12dp"
+                    android:textSize="20dp"
+                    android:textColor="@color/base_color_text_black"
+                    android:text="物品类型" />
 
 
-        <TextView
-            android:id="@+id/type_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/type_title"
-            android:layout_alignBottom="@+id/type_title"
-            android:layout_alignLeft="@+id/time_text"
-            android:layout_alignStart="@+id/time_text"
-            android:text="烤肉拌饭  约14元"
-            android:textColor="@color/base_color_text_black"
-            android:textSize="20dp" />
+                <TextView
+                    android:id="@+id/type_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="烤肉拌饭  约14元"
+                    android:textColor="@color/base_color_text_black"
+                    android:textSize="20dp" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+                <TextView
+                    android:id="@+id/cost_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="12dp"
+                    android:textColor="@color/base_color_text_black"
+                    android:text="悬赏金额" />
+                <TextView
+                    android:id="@+id/cost_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="5元"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:textColor="@color/base_color_text_black"
+                    android:textSize="20dp"
+                  />
+
+            </TableRow>
+        </TableLayout>
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignLeft="@+id/time_title"
+        android:layout_alignStart="@+id/time_title"
+        >
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/phone_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="3dp"
+                android:text="联系方式"
+                android:textColor="@color/base_color_text_black"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/phone_text"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="3dp"
+                android:text="1234567890"
+                android:textColor="@color/base_color_text_black"
+                android:textSize="20dp" />
+
+            <Button
+                android:id="@+id/button_contact"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="20dp"
+                android:text="联系接单人" />
+
+        </TableRow>
+    </TableLayout>
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/time_title"
+        android:layout_alignStart="@+id/time_title">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/orderType_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="15dp"
+                android:text="订单状态"
+                android:textColor="@color/base_color_text_black"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/orderType_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="15dp"
+                android:text="已接单"
+                android:textColor="@color/swiperefresh_color3"
+                android:textSize="20dp" />
 
 
+        </TableRow>
+    <ScrollView>
 
-        <TextView
-            android:id="@+id/order_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/type_title"
-            android:layout_alignStart="@+id/type_title"
-            android:layout_below="@+id/type_title"
-            android:layout_marginTop="10dp"
-            android:textSize="20dp"
-            android:textColor="@color/base_color_text_black"
-            android:text="订单详情" />
-        <TextView
-            android:id="@+id/order_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="下沉广场的烤肉拌饭，麻辣味嘎嘣脆，味道好极了不吃不是人。"
-            android:textColor="@color/base_color_text_black"
-            android:textSize="20dp"
-            android:layout_alignBaseline="@+id/order_title"
-            android:layout_alignBottom="@+id/order_title"
-            android:layout_alignLeft="@+id/type_text"
-            android:layout_alignStart="@+id/type_text" />
 
-        <TextView
-            android:id="@+id/cost_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/order_title"
-            android:layout_alignStart="@+id/order_title"
-            android:layout_below="@+id/order_text"
-            android:layout_marginTop="10dp"
-            android:textSize="20dp"
-            android:textColor="@color/base_color_text_black"
-            android:text="悬赏金额" />
-        <TextView
-            android:id="@+id/phone_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/order_title"
-            android:layout_alignStart="@+id/order_title"
-            android:layout_below="@+id/cost_title"
-            android:layout_marginTop="10dp"
-            android:textSize="20dp"
-            android:textColor="@color/base_color_text_black"
-            android:text="联系方式" />
-        <TextView
-            android:id="@+id/phone_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1234567890"
-            android:textColor="@color/base_color_text_black"
-            android:textSize="20dp"
-            android:layout_alignBaseline="@+id/phone_title"
-            android:layout_alignBottom="@+id/phone_title"
-            android:layout_alignLeft="@+id/cost_text"
-            android:layout_alignStart="@+id/cost_text" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/order_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="20dp"
+                android:text="订单详情"
+                android:textColor="@color/base_color_text_black"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/order_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:text="下沉广场的烤肉拌饭，麻辣味嘎嘣脆，味道好极了不吃不是人。"
+                android:textColor="@color/base_color_text_black"
+                android:textSize="20dp" />
+
+
+        </TableRow>
+    </ScrollView>
+
+    </TableLayout>
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_gravity="bottom">
+
         <Button
-            android:id="@+id/button_contact"
-            android:layout_width="wrap_content"
+            android:id="@+id/button"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="联系接单人"
-            android:layout_alignBaseline="@+id/phone_text"
-            android:layout_alignBottom="@+id/phone_text"
-            android:layout_toRightOf="@+id/phone_text"
-            android:layout_toEndOf="@+id/phone_text"
-            android:layout_marginLeft="17dp"
-            android:layout_marginStart="17dp" />
-
-        <TextView
-            android:id="@+id/cost_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5元"
-            android:textColor="@color/base_color_text_black"
-            android:textSize="20dp"
-            android:layout_alignBaseline="@+id/cost_title"
-            android:layout_alignBottom="@+id/cost_title"
-            android:layout_alignLeft="@+id/order_text"
-            android:layout_alignStart="@+id/order_text" />
-        <TextView
-            android:id="@+id/orderType_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:textColor="@color/base_color_text_black"
-            android:text="订单状态"
-            android:layout_below="@+id/button_contact"
-            android:layout_alignLeft="@+id/phone_title"
-            android:layout_alignStart="@+id/phone_title"
-            android:layout_marginTop="15dp" />
-
-        <TextView
-            android:id="@+id/orderType_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/orderType_title"
-            android:layout_alignBottom="@+id/cost_title"
-            android:layout_alignLeft="@+id/order_text"
-            android:layout_alignStart="@+id/order_text"
-            android:text="已接单"
-            android:textColor="@color/swiperefresh_color3"
-            android:textSize="20dp" />
-        <ImageView
-            android:id="@+id/order_affrim"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/arrow1"
-            android:layout_marginBottom="33dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignRight="@+id/button_contact"
-            android:layout_alignEnd="@+id/button_contact" />
-
-
+            android:text="确认配送" />
 
     </RelativeLayout>
+
+
+
 
 </LinearLayout>
