--- a/app/src/main/res/drawable/fab.xml
+++ b/app/src/main/res/drawable/fab.xml
@@ -110,7 +110,7 @@
             <!-- Blue button pressed -->
             <item>
                 <shape android:shape="oval">
-                    <solid android:color="#BFEFFF"/>
+                    <solid android:color="#AB82FF"/>
                 </shape>
             </item>
         </layer-list>
