--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,5 +33,8 @@
     <color name="white">#ffffff</color>
 
     <color name="light_gray">#E5E5E5</color>
+    <color name="colordevider">#e0e0e0</color>
+    <color name="colorSub">#b0afaf</color>
+    <color name="colorTex">#585858</color>
 </resources>
 
