--- a/app/src/main/res/layout/activity_account_login.xml
+++ b/app/src/main/res/layout/activity_account_login.xml
@@ -8,6 +8,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/logo_margin_top"
         android:layout_gravity="center"
         android:scaleType="centerCrop"
         android:layout_centerInParent="true"
