--- a/app/src/main/res/layout/order_detail.xml
+++ b/app/src/main/res/layout/order_detail.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
-    <include layout="@layout/topbar_layout"></include>
+    android:background="#fff"
+    android:orientation="vertical"
+    android:weightSum="1"
+    >
+
+    <include
+        layout="@layout/topbar_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="51dp"></include>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -13,14 +21,14 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="18dp"
+            android:layout_marginStart="18dp"
             android:text="市委书记李达康"
             android:textColor="@color/base_color_text_black"
             android:textSize="20dp"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/order_detail_avatar"
-            android:layout_toEndOf="@+id/order_detail_avatar"
-            android:layout_marginLeft="18dp"
-            android:layout_marginStart="18dp" />
+            android:layout_toEndOf="@+id/order_detail_avatar" />
 
         <xzh.com.materialdesign.view.CircleImageView
             android:id="@+id/order_detail_avatar"
@@ -39,13 +47,13 @@
             android:id="@+id/imageView"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/male"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="5dp"
-            android:layout_centerVertical="true"
             android:layout_alignTop="@+id/textView1"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="30dp"
+            android:layout_marginStart="5dp"
+            android:layout_toEndOf="@+id/textView1"
             android:layout_toRightOf="@+id/textView1"
-            android:layout_toEndOf="@+id/textView1" />
+            android:src="@drawable/male" />
 
     </RelativeLayout>
 
@@ -53,144 +61,269 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="12dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="23dp"
-            android:text="悬赏"
-            android:textAlignment="center"
-            android:textColor="@color/base_color_text_black"
-            android:textSize="20dp" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5元"
-            android:textSize="20dp"
-            android:textColor="@color/base_color_text_black"
-            android:layout_marginLeft="28dp"
-            android:layout_marginStart="28dp"
-            android:layout_alignBaseline="@+id/textView3"
-            android:layout_alignBottom="@+id/textView3"
-            android:layout_toRightOf="@+id/textView4"
-            android:layout_toEndOf="@+id/textView4" />
+            <LinearLayout
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="下沉广场的烤肉拌饭，麻辣味嘎嘣脆，味道好极了不吃不是人。"
-            android:textColor="@color/base_color_text_black"
-            android:textSize="20dp"
-            android:layout_alignBaseline="@+id/textView5"
-            android:layout_alignBottom="@+id/textView5"
-            android:layout_alignLeft="@+id/textView9"
-            android:layout_alignStart="@+id/textView9" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/textView4"
-            android:layout_alignBottom="@+id/textView4"
-            android:layout_alignLeft="@+id/textView7"
-            android:layout_alignStart="@+id/textView7"
-            android:text="烤肉拌饭  约14元"
-            android:textColor="@color/base_color_text_black"
-            android:textSize="20dp" />
+                <TextView
+                    android:id="@+id/condition1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="悬赏"
+                    android:textColor="@color/colorSub"
+                    android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView3"
-            android:layout_alignStart="@+id/textView3"
-            android:layout_below="@+id/textView3"
-            android:layout_marginTop="10dp"
-            android:textSize="20dp"
-            android:textColor="@color/base_color_text_black"
-            android:text="物品类型" />
+                <TextView
+                    android:id="@+id/condition2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:text="5元"
+                    android:textColor="@color/colorTex"
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView4"
-            android:layout_alignStart="@+id/textView4"
-            android:layout_below="@+id/textView4"
-            android:layout_marginTop="10dp"
-            android:textSize="20dp"
-            android:textColor="@color/base_color_text_black"
-            android:text="订单详情" />
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/condition1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="物品类型"
+                    android:textColor="@color/colorSub"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/condition2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:text="烤肉拌饭  约14元"
+                    android:textColor="@color/colorTex"
+
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/condition1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="订单详情"
+                    android:textColor="@color/colorSub"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/condition2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:text="下沉广场的烤肉拌饭，麻辣味嘎嘣脆，味道好极了不吃不是人。"
+                    android:textColor="@color/colorTex"
+
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+
 
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:padding="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/colordevider" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="179dp">
+        android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="10dp"
-            android:layout_toLeftOf="@+id/button2"
-            android:layout_toStartOf="@+id/button2"
-            android:text="物品地点"
-            android:textSize="20dp" />
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/button3"
-            android:layout_alignBottom="@+id/button3"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginEnd="94dp"
-            android:layout_marginRight="94dp"
-            android:text="配送地点"
-            android:textSize="20dp" />
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/condition1"
+                    android:layout_width="118dp"
+                    android:layout_height="wrap_content"
+                    android:text="物品地点"
+                    android:textColor="@color/colorSub"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/condition2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:text="下沉广场烤肉拌饭"
+                    android:textColor="@color/colorTex"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:layout_width="58dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/chose_map" />
+
+            </LinearLayout>
+
+            <View
+                android:id="@+id/view2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/colordevider"
+                android:padding="16dp" />
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/condition1"
+                    android:layout_width="118dp"
+                    android:layout_height="wrap_content"
+                    android:text="配送地点"
+                    android:textColor="@color/colorSub"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/condition2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:text="16号楼512"
+                    android:textColor="@color/colorTex"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:layout_width="58dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/chose_map" />
+            </LinearLayout>
+
+            <View
+                android:id="@+id/view3"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/colordevider"
+                android:padding="16dp" />
+        </LinearLayout>
+
 
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:weightSum="1">
 
-        <EditText
-            android:id="@+id/editText5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/textView11"
-            android:layout_alignBottom="@+id/textView11"
-            android:layout_toEndOf="@+id/textView11"
-            android:layout_toRightOf="@+id/textView11"
-            android:ems="10"
-            android:inputType="time" />
+        <RelativeLayout
+            android:layout_width="168dp"
+            android:layout_height="81dp"
+            android:layout_weight="0.93">
 
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="13dp"
-            android:text="订单持续时间"
-            android:textColor="@color/base_color_text_black"
-            android:textSize="20dp" />
+            <TextView
+                android:id="@+id/editText5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/textView11"
+                android:layout_alignBottom="@+id/textView11"
+                android:layout_marginLeft="30dp"
+                android:layout_toEndOf="@+id/textView11"
+                android:layout_toRightOf="@+id/textView11"
+                android:ems="10"
+                android:inputType="time"
+                android:text="20min"
+                android:textColor="@color/base_color_text_black"
+                android:textSize="20dp" />
 
-    </RelativeLayout>
+            <!--<EditText-->
+            <!--android:id="@+id/editText5"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignBaseline="@+id/textView11"-->
+            <!--android:layout_alignBottom="@+id/textView11"-->
+            <!--android:layout_toEndOf="@+id/textView11"-->
+            <!--android:layout_toRightOf="@+id/textView11"-->
+            <!--android:ems="10"-->
+            <!--android:inputType="time" />-->
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="13dp"
+                android:paddingTop="15dp"
+                android:text="订单持续时间"
+                android:textColor="@color/base_color_text_black"
+                android:textSize="20dp" />
+
+            <ImageButton
+                android:id="@+id/img_float_btn"
+                android:layout_alignParentRight="true"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:background="@drawable/fab"
+                android:src="@drawable/fab_right" />
+        </RelativeLayout>
+
+
+    </LinearLayout>
 
 </LinearLayout>
