--- a/app/src/main/res/layout/topbar_layout.xml
+++ b/app/src/main/res/layout/topbar_layout.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:gravity="center">
+    android:gravity="center"
+    >
 
     <ImageButton
         android:id="@+id/nav_back"
@@ -15,9 +16,19 @@
     <TextView
         android:id="@+id/nav_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:gravity="center"
-        android:textColor="#000000"
-        android:textSize="20sp" />
+        android:text="来份烤肉拌饭"
+        android:textColor="@color/base_color_text_black"
+        android:textSize="20sp"
+        android:layout_marginBottom="12dp"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentBottom="true"
+        android:padding="16dp"
+        android:layout_below="@id/nav_title"
+        android:background="@color/colordevider" />
 </RelativeLayout>
