--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-
+    <dimen name="logo_margin_top">50dp</dimen>
     <dimen name="navigation_drawer_width">300dp</dimen>
     <dimen name="toolbar_elevation">4dp</dimen>
 </resources>
