--- a/app/src/main/res/layout/order_transport_detail.xml
+++ b/app/src/main/res/layout/order_transport_detail.xml
@@ -3,73 +3,142 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#fff">
 
     <include
-        layout="@layout/topbar_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp" />
+        layout="@layout/topbar_layout" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/realName_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="真实姓名："
-            android:textColor="@color/base_color_text_black"
-            android:textSize="20dp"
-            android:layout_marginLeft="19dp"
-            android:layout_marginStart="19dp"
-            android:layout_alignTop="@+id/order_detail_avatar"
-            android:layout_toRightOf="@+id/order_detail_avatar"
-            android:layout_toEndOf="@+id/order_detail_avatar" />
-        <TextView
-            android:id="@+id/realName_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="小王"
-            android:textColor="@color/base_color_text_black"
-            android:textSize="20dp"
-            android:layout_alignBaseline="@+id/realName_title"
-            android:layout_alignBottom="@+id/realName_title"
-            android:layout_toRightOf="@+id/realName_title"
-            android:layout_toEndOf="@+id/realName_title" />
 
-        <TextView
-            android:id="@+id/nickName_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="昵        称："
-            android:textColor="@color/base_color_text_black"
-            android:textSize="20dp"
-            android:layout_alignBottom="@+id/order_detail_avatar"
-            android:layout_alignLeft="@+id/realName_title"
-            android:layout_alignStart="@+id/realName_title" />
-        <TextView
-            android:id="@+id/nickName_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="市委书记李达康"
-            android:textColor="@color/base_color_text_black"
-            android:textSize="20dp"
-            android:layout_alignBottom="@+id/order_detail_avatar"
-            android:layout_toRightOf="@+id/realName_title"
-            android:layout_toEndOf="@+id/realName_title" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-        <xzh.com.materialdesign.view.CircleImageView
-            android:id="@+id/order_detail_avatar"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_centerVertical="true"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="18dp"
-            android:layout_marginTop="12dp"
-            android:src="@drawable/img_user_head" />
+            <xzh.com.materialdesign.view.CircleImageView
+                android:id="@+id/order_detail_avatar"
+                android:layout_width="77dp"
+                android:layout_height="80dp"
+                android:src="@drawable/img_user_head" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/condition1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="真实姓名"
+                        android:textColor="@color/colorSub"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/condition2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:text="小王"
+                        android:textColor="@color/colorTex"
+
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/condition1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="真实姓名"
+                        android:textColor="@color/colorSub"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/condition2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:text="小王"
+                        android:textColor="@color/colorTex"
+
+                        android:textSize="18sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/realName_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/order_detail_avatar"
+                android:layout_marginLeft="19dp"
+                android:layout_marginStart="19dp"
+                android:layout_toEndOf="@+id/order_detail_avatar"
+                android:layout_toRightOf="@+id/order_detail_avatar"
+                android:text="真实姓名："
+                android:textColor="@color/base_color_text_black"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/nickName_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/nickName_text"
+                android:layout_alignBottom="@+id/nickName_text"
+                android:layout_toLeftOf="@+id/nickName_text"
+                android:layout_toStartOf="@+id/nickName_text"
+                android:text="昵        称："
+                android:textColor="@color/base_color_text_black"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/realName_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/realName_title"
+                android:layout_alignBottom="@+id/realName_title"
+                android:layout_toEndOf="@+id/realName_title"
+                android:layout_toRightOf="@+id/realName_title"
+                android:text="小王"
+                android:textColor="@color/base_color_text_black"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/nickName_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/order_detail_avatar"
+                android:layout_toEndOf="@+id/realName_title"
+                android:layout_toRightOf="@+id/realName_title"
+                android:text="市委书记李达康"
+                android:textColor="@color/base_color_text_black"
+                android:textSize="20dp" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
