--- a/app/src/main/res/layout/topbar_layout.xml
+++ b/app/src/main/res/layout/topbar_layout.xml
@@ -18,11 +18,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_marginBottom="12dp"
         android:gravity="center"
-        android:text="来份烤肉拌饭"
         android:textColor="@color/base_color_text_black"
-        android:textSize="20sp"
-        android:layout_marginBottom="12dp"/>
+        android:textSize="20sp" />
 
 
 </RelativeLayout>
